# ebb

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
skills/ebb-query-data/: SKILL.md  ebb-query-data.example.yaml  npm-shrinkwrap.json  package.json
skills/ebb-query-data/agents/: openai.yaml
skills/ebb-query-data/references/: configuration.md
skills/ebb-query-data/scripts/: ebb-query-data-worker.mjs  ebb-query-data.mjs
skills/ebb-query-data/scripts/lib/: catalog.mjs  config.mjs  duckdb.mjs  errors.mjs  isolation.mjs  output.mjs
skills/ebb-query-data/tests/: catalog-output.test.mjs  cli.test.mjs  config.test.mjs  duckdb.test.mjs  isolation.test.mjs
src/ebb/: __init__.py  api.py  backfill.py  checks.py  cli.py  compact.py  config.py  engine.py  export.py  logs.py  mysqlutil.py  naming.py  purge.py  queryservice.py  registry.py  s3util.py  scheduler.py  status.py  timeutil.py
tests/: conftest.py  docker-compose.test.yml  test_backfill.py  test_backfill_hole_repro.py  test_cli.py  test_compact.py  test_config.py  test_export.py  test_export_trx_guard.py  test_naming.py  test_purge.py  test_purge_deadlock_repro.py  test_query.py  test_serve.py  test_status_check.py  test_timeutil.py  test_timezone_partition.py
